--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
     <form
       action="https://mate-academy-form-lesson.herokuapp.com/create-application"
       method="post"
-      onsubmit="onSubmit()">
+      onsubmit="onSubmit()"
+    >
 
       <fieldset class="personal-information block">
         <legend>Personal information</legend>
@@ -28,7 +29,8 @@
               id="surname"
               required
               maxlength="20"
-              autocomplete="off">
+              autocomplete="off"
+            >
           </label>
         </div>
 
@@ -36,12 +38,14 @@
           <label for="name">
             Name:
 
-            <input type="text"
-            name="name"
-            id="name"
-            required
-            maxlength="15"
-            autocomplete="off">
+            <input
+              type="text"
+              name="name"
+              id="name"
+              required
+              maxlength="15"
+              autocomplete="off"
+            >
           </label>
         </div>
 
@@ -49,12 +53,14 @@
           <label for="age">
             How old are you?
 
-            <input type="number"
-            name="age"
-            id="age"
-            value="12"
-            min="8"
-            max="100">
+            <input
+              type="number"
+              name="age"
+              id="age"
+              value="12"
+              min="8"
+              max="100"
+            >
           </label>
         </div>
 
@@ -62,9 +68,11 @@
           <label for="birthday">
             Full date of birth:
 
-            <input type="date"
-            name="birthday"
-            id="birthday">
+            <input
+              type="date"
+              name="birthday"
+              id="birthday"
+            >
           </label>
         </div>
 
@@ -72,10 +80,12 @@
           <label for="term">
             I accept the term of the agreement
 
-            <input type="checkbox"
-            name="term"
-            id="term"
-            required>
+            <input
+              type="checkbox"
+              name="term"
+              id="term"
+              required
+            >
           </label>
         </div>
       </fieldset>
@@ -86,13 +96,15 @@
           <label for="email">
             E-mail:
 
-            <input type="email"
-            name="email"
-            id="email"
-            required
-            minlength="5"
-            placeholder="email@example.com"
-            autocomplete="off">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              required
+              minlength="5"
+              placeholder="email@example.com"
+              autocomplete="off"
+            >
           </label>
         </div>
 
@@ -100,11 +112,13 @@
           <label for="password">
             Password:
 
-            <input type="password"
-            name="password"
-            id="password"
-            required
-            autocomplete="off">
+            <input
+              type="password"
+              name="password"
+              id="password"
+              required
+              autocomplete="off"
+            >
           </label>
         </div>
       </fieldset>
@@ -115,16 +129,20 @@
             Do you love cats?
 
           <label for="cats-1">
-            <input type="radio"
+            <input
+              type="radio"
               name="cats"
-              id="cats-1">
+              id="cats-1"
+            >
             Yes
           </label>
 
           <label for="cats-2">
-            <input type="radio"
+            <input
+              type="radio"
               name="cats"
-              id="cats-2">
+              id="cats-2"
+            >
             No
           </label>
         </div>
@@ -133,9 +151,11 @@
           <label for="color">
             What is your favorite color?
 
-            <input type="color"
-            name="color"
-            id="color">
+            <input
+              type="color"
+              name="color"
+              id="color"
+            >
           </label>
         </div>
 
@@ -143,10 +163,12 @@
           <label for="time">
             What time do you go to bed?
 
-            <input type="time"
-            name="time"
-            id="time"
-            step="2">
+            <input
+              type="time"
+              name="time"
+              id="time"
+              step="2"
+            >
           </label>
         </div>
 
@@ -154,9 +176,11 @@
           <label for="cars">
             What are your favorite brand of cars?
 
-            <select name="cars"
+            <select
+              name="cars"
               id="cars"
-              multiple>
+              multiple
+            >
               <option value="BMW">BMW</option>
               <option value="Audi">Audi</option>
               <option value="Lada">Lada</option>
@@ -168,10 +192,12 @@
           <label for="rate">
             How fo you rate our work?
 
-            <input type="range"
-            name="rate"
-            id="rate"
-            value="0">
+            <input
+              type="range"
+              name="rate"
+              id="rate"
+              value="0"
+            >
           </label>
         </div>
       </fieldset>
@@ -182,10 +208,12 @@
           <label for="color">
             Comments:
 
-            <textarea name="comments"
+            <textarea
+              name="comments"
               id="comments"
               cols="20"
-              rows="2">
+              rows="2"
+            >
             </textarea>
           </label>
         </div>
@@ -194,8 +222,7 @@
           <label for="reccomend">
             Would you reccomend us?
 
-            <select name="reccomend"
-              id="reccomend">
+            <select name="reccomend" id="reccomend">
               <option value="BMW">yes</option>
               <option value="Audi">no</option>
             </select>
